<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:elevation="6dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="30dp"
        app:cardMaxElevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#140D17"
            android:orientation="vertical">

            <TextView
                android:id="@+id/questionSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#6583FE"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:text="@string/loading"
                android:textColor="#1D1222"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/visible1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/questionStudentId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#6583FE"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/loading"
                    android:textAllCaps="true"
                    android:textColor="#1D1222"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/dateAsked"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#6583FE"
                    android:paddingStart="10dp"
                    android:paddingEnd="20dp"
                    android:text="@string/loading"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line"
                android:backgroundTint="@color/white" />

            <TextView
                android:id="@+id/questionAsked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:lineSpacingExtra="6dp"
                android:text="@string/loading"
                android:textColor="@color/white"
                android:visibility="visible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line"
                android:backgroundTint="@color/white" />


            <LinearLayout
                android:id="@+id/gone2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/viewReply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/new_student_question"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:text="@string/other_student_s_replies"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/gone3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="#6583FE"
                    app:cardCornerRadius="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/teacher"
                        android:textColor="#1D1222"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                android:elevation="6dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="30dp"
                app:cardMaxElevation="6dp">

                <LinearLayout
                    android:id="@+id/gone1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#201425"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="30dp"
                        android:lineSpacingExtra="6dp"
                        android:text="@string/loading"
                        android:textColor="@color/white" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>